* fix extension * change to namespace function from global function

--- a/vs/vs/vs.vcxproj
+++ b/vs/vs/vs.vcxproj
@@ -115,7 +115,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\minilisp.cpp" />
+    <ClCompile Include="..\..\minilisp.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
