--- a/vs/vs/vs.vcxproj.filters
+++ b/vs/vs/vs.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\minilisp.cpp">
+    <ClCompile Include="..\..\minilisp.hpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
